updated index html

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
     <form action="{{ url_for('generate') }}" method="post" class="form">
         <label>Business name</label>
-      <input name="user_name" placeholder="e.g., Spongebob panties" required>
+      <input name="user_name" placeholder="e.g., Spongebob Boutique" required>
 
 <label>Business Type</label>
       <select name="business_type" required>
