--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
       <button type="submit" class="btn">Generate Policy</button>
     </form>
 
-    <footer class="muted small">Prototype • Ogogoroh Casmir Omizu • Dennis Osadebay University</footer>
+    <footer class="muted small"> • Dennis Osadebay University</footer>
   </main>
 </body>
 </html>
