--- a/templates/result.html
+++ b/templates/result.html
@@ -22,7 +22,7 @@
 
     <a href="{{ url_for('index') }}" class="btn secondary">Create another</a>
 <br>
-    <footer class="muted small">  Dennis Osadebay University</footer>
+    <footer class="muted small">  ©2025  </footer>
   </main>
 </body>
 </html>
